Fix styles alignment for intro page

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,10 +7,10 @@
 body {
     font-family: "Inter", sans-serif;
     background: #F5F7FB;
-    padding: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: center;    
     align-items: center;
+    overflow: hidden;
 }
 
 .blob1 {
@@ -28,7 +28,7 @@ body {
 }
 
 .intro-container {
-    height: 80vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -77,6 +77,7 @@ body {
 .quiz-container {
     display: flex;
     flex-direction: column;
+    padding: 50px;
 }
 
 .checkAns {
@@ -97,15 +98,17 @@ body {
 
 .options-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: baseline;
+    gap: 15px;
 }
 
 .options {
     border-radius: 8px;
     padding: 8px 20px;
-    border: 0.77px solid #4D5B9E;
+    border: 1px solid #4D5B9E;
     color: #4D5B9E;
     background: transparent;
+    font-weight: 700;
 }
 
 .chosen {
@@ -113,4 +116,5 @@ body {
     padding: 8px 20px;
     border: none;
     background: #D6DBF5;
+    font-weight: 700;
 }
